force-app/main/default/objects/Voice_CRM_Settings__mdt/Voice_CRM_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Voice CRM Settings</label>
    <pluralLabel>Voice CRM Settings</pluralLabel>
</CustomObject>