force-app/main/default/objects/Voice_CRM_Settings__mdt/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <label>AI Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
                <default>true</default>
                <label>OpenAI</label>
            </value>
            <value>
                <fullName>Claude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>