force-app/main/default/objects/Voice_CRM_Settings__mdt/fields/Claude_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Claude_API_Key__c</fullName>
    <label>Claude API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>