force-app/main/default/objects/Voice_CRM_Settings__mdt/fields/OpenAI_API_Key__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_API_Key__c</fullName>
    <label>OpenAI API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>